--- a/reference-api/pom.xml
+++ b/reference-api/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.transformuk.hee</groupId>
   <artifactId>reference-api</artifactId>
-  <version>2.3.4</version>
+    <version>3.0.0</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -18,10 +18,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.transformuk.hee</groupId>
-      <artifactId>tis-parent-api</artifactId>
-      <version>1.0.2</version>
-      <type>pom</type>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.9.7</version>
+    </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>21.0</version>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
