--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <artifactId>tis-parent</artifactId>
     <groupId>com.transformuk.hee</groupId>
-    <version>2.2.3</version>
+      <version>3.0.0</version>
     <relativePath/>
   </parent>
 
   <groupId>com.transformuk.hee.tis</groupId>
   <artifactId>reference-service</artifactId>
-  <version>3.4.7</version>
+    <version>4.0.0</version>
   <packaging>war</packaging>
 
   <prerequisites>
@@ -27,12 +27,11 @@
     <commons-lang.version>3.5</commons-lang.version>
     <docker-maven-plugin.version>0.4.13</docker-maven-plugin.version>
     <frontend.maven.plugin.version>1.3</frontend.maven.plugin.version>
-    <hibernate.version>5.2.8.Final</hibernate.version>
-    <hikaricp.version>2.6.0</hikaricp.version>
-    <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+      <hibernate.version>5.3.7.Final</hibernate.version>
+      <hikaricp.version>3.2.0</hikaricp.version>
     <java.version>1.8</java.version>
     <javassist.version>3.21.0-GA</javassist.version>
-    <javax.servlet.version>4.0.0-b03</javax.servlet.version>
+      <javax.servlet.version>4.0.1</javax.servlet.version>
     <jhipster.server.version>1.3.1</jhipster.server.version>
     <jjwt.version>0.7.0</jjwt.version>
     <logstash-logback-encoder.version>4.8</logstash-logback-encoder.version>
@@ -45,11 +44,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.version>3.0.0</maven.version>
-    <metrics-spring.version>3.1.3</metrics-spring.version>
-    <node.version>v6.10.0</node.version>
     <!-- Sonar properties -->
-    <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
-    <prometheus-simpleclient.version>0.0.20</prometheus-simpleclient.version>
     <run.addResources>false</run.addResources>
     <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
     <scala.version>2.12.1</scala.version>
@@ -77,48 +72,16 @@
     <sonar.issue.ignore.multicriteria.UndocumentedApi.ruleKey>squid:UndocumentedApi
     </sonar.issue.ignore.multicriteria.UndocumentedApi.ruleKey>
 
-    <sonar.jacoco.itReportPath>${project.testresult.directory}/coverage/jacoco/jacoco-it.exec
-    </sonar.jacoco.itReportPath>
-    <sonar.jacoco.reportPath>${project.testresult.directory}/coverage/jacoco/jacoco.exec</sonar.jacoco.reportPath>
-    <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
-
-    <sonar.javascript.jstestdriver.reportsPath>${project.testresult.directory}/karma
-    </sonar.javascript.jstestdriver.reportsPath>
-    <!-- For Sonar < 6.2 -->
-    <sonar.javascript.lcov.reportPath>${project.testresult.directory}/coverage/report-lcov/lcov.info
-    </sonar.javascript.lcov.reportPath>
-    <!-- For Sonar >= 6.2 -->
-    <sonar.javascript.lcov.reportPaths>${project.testresult.directory}/coverage/report-lcov/lcov.info
-    </sonar.javascript.lcov.reportPaths>
-
     <sonar.sources>${project.basedir}/src/main/</sonar.sources>
-    <sonar.surefire.reportsPath>${project.testresult.directory}/surefire-reports</sonar.surefire.reportsPath>
     <sonar.tests>${project.basedir}/src/test/</sonar.tests>
 
     <!-- Spring properties -->
-    <springfox.version>2.8.0</springfox.version>
-    <tis.shared.modules.version>2.0.1</tis.shared.modules.version>
-    <undertow.version>1.4.10.Final</undertow.version>
+      <tis.shared.modules.version>3.0.0</tis.shared.modules.version>
+      <undertow.version>2.0.15.Final</undertow.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
-    <yarn.version>v0.21.3</yarn.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient</artifactId>
-      <version>${prometheus-simpleclient.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient_dropwizard</artifactId>
-      <version>${prometheus-simpleclient.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient_servlet</artifactId>
-      <version>${prometheus-simpleclient.version}</version>
-    </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-hibernate5</artifactId>
@@ -143,6 +106,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+        <version>1.4.192</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -152,39 +116,19 @@
       <!-- parent POM declares this dependency in default (compile) scope -->
     </dependency>
     <dependency>
-      <groupId>com.ryantenney.metrics</groupId>
-      <artifactId>metrics-spring</artifactId>
-      <version>${metrics-spring.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>metrics-annotation</artifactId>
-          <groupId>com.codahale.metrics</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>metrics-core</artifactId>
-          <groupId>com.codahale.metrics</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>metrics-healthchecks</artifactId>
-          <groupId>com.codahale.metrics</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
       <groupId>com.transformuk.hee</groupId>
       <artifactId>audit</artifactId>
-      <version>2.1.0</version>
+        <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.transformuk.hee</groupId>
       <artifactId>profile-client</artifactId>
-      <version>2.4.0</version>
+        <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.transformuk.hee</groupId>
       <artifactId>reference-api</artifactId>
-      <version>2.3.4</version>
+        <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.zaxxer</groupId>
@@ -202,34 +146,6 @@
       <version>${commons-io.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-annotation</artifactId>
-      <version>${dropwizard-metrics.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-json</artifactId>
-      <version>${dropwizard-metrics.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-jvm</artifactId>
-      <version>${dropwizard-metrics.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-servlet</artifactId>
-      <version>${dropwizard-metrics.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-servlets</artifactId>
-    </dependency>
-    <dependency>
       <groupId>io.github.jhipster</groupId>
       <artifactId>jhipster</artifactId>
       <version>${jhipster.server.version}</version>
@@ -238,21 +154,6 @@
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>${jjwt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-bean-validators</artifactId>
-      <version>${springfox.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-      <version>${springfox.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
-      <version>${springfox.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -506,43 +407,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <!-- Force alphabetical order to have a reproducible build -->
-          <runOrder>alphabetical</runOrder>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco-maven-plugin.version}</version>
-        <executions>
-          <execution>
-            <id>pre-unit-tests</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <destFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</destFile>
-            </configuration>
-          </execution>
-          <!-- Ensures that the code coverage report for unit tests is created after unit tests have been run -->
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <dataFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</dataFile>
-              <outputDirectory>${project.testresult.directory}/coverage/jacoco</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>${sonar-maven-plugin.version}</version>
@@ -623,41 +487,6 @@
         <!-- default Spring profiles -->
         <spring.profiles.active>prod</spring.profiles.active>
       </properties>
-    </profile>
-    <profile>
-      <!--
-        Profile for monitoring the application with Graphite.
-      -->
-      <id>graphite</id>
-      <dependencies>
-        <dependency>
-          <groupId>io.dropwizard.metrics</groupId>
-          <artifactId>metrics-graphite</artifactId>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <!--
-        Profile for monitoring the application with Prometheus.
-      -->
-      <id>prometheus</id>
-      <dependencies>
-        <dependency>
-          <groupId>io.prometheus</groupId>
-          <artifactId>simpleclient</artifactId>
-          <version>${prometheus-simpleclient.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>io.prometheus</groupId>
-          <artifactId>simpleclient_dropwizard</artifactId>
-          <version>${prometheus-simpleclient.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>io.prometheus</groupId>
-          <artifactId>simpleclient_servlet</artifactId>
-          <version>${prometheus-simpleclient.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
     <profile>
       <!--
