--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -18,22 +18,20 @@ search:
     limit: 100
 
 management:
-  context-path: /management
-  security:
-    enabled: false
+  endpoints:
+    enabled-by-default: false
   health:
     mail:
       enabled: false # When using the MailService, configure an SMTP server and set this to true
-  add-application-context-header: false
+  server:
+    add-application-context-header: false
+    servlet.context-path: /management
 
 spring:
   application:
     name: reference
   profiles:
     active: local
-    include:
-    - prometheus
-    - swagger
   jackson:
     serialization.write_dates_as_timestamps: false
     serialization.indent_output: true
@@ -42,7 +40,6 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     database: MYSQL
     show-sql: true
-    format-sql: true
     properties:
       hibernate.id.new_generator_mappings: true
       hibernate.cache.use_second_level_cache: false
@@ -53,9 +50,24 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+  flyway:
+    baseline-version: 1 # version to start migration
+    baseline-on-migrate: true
+    check-location: false # Check that migration scripts location exists.
+    clean-on-validation-error: false
+    ignore-future-migrations: true
+    init-sqls: # SQL statements to execute to initialize a connection immediately after obtaining it.
+    locations: classpath:db/migration
+    out-of-order: true
+    password: ${DBPASSWORD:}
+    schemas: ${DBNAME:reference}
+    sql-migration-prefix: V
+    url: ${spring.datasource.url}
+    user: ${spring.datasource.username}
+    enabled: true
   messages:
     basename: i18n/messages
-    cache-seconds: 1
+    cache-duration: 1s
   mvc:
     favicon:
       enabled: false
@@ -77,47 +89,19 @@ spring:
     port: 25
     username:
     password:
-
-flyway:
-  baseline-description: #
-  baseline-version: 1 # version to start migration
-  baseline-on-migrate: true
-  check-location: false # Check that migration scripts location exists.
-  clean-on-validation-error: false
-  flyway.enabled: true # Enable flyway.
-  encoding: #
-  ignore-failed-future-migration: #
-  init-sqls: # SQL statements to execute to initialize a connection immediately after obtaining it.
-  locations: classpath:db/migration
-  out-of-order: true
-  password: ${DBPASSWORD:}
-  placeholder-prefix:
-  placeholder-replacement:
-  placeholder-suffix:
-  placeholders.*:
-  schemas: ${DBNAME:reference}
-  sql-migration-prefix: V
-  sql-migration-separator:
-  sql-migration-suffix: .sql
-  table:  #
-  url: ${spring.datasource.url}
-  user: ${spring.datasource.username}
-  validate-on-migrate:  #
-  initOnMigrate: true
-
-security:
-  basic:
-    enabled: false
-  user:
-    name: admin
-    password: admin
-
+  security:
+    basic:
+      enabled: false
+    user:
+      name: admin
+      password: admin
 server:
   port: 8088
-  session:
-    cookie:
-      http-only: true
-  context-path: /reference
+  servlet:
+    session:
+      cookie:
+        http-only: true
+    context-path: /reference
 
 info:
   project:
@@ -153,19 +137,6 @@ jhipster:
         # Token is valid 24 hours
         token-validity-in-seconds: 86400
         token-validity-in-seconds-for-remember-me: 2592000
-  metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
-    jmx.enabled: true
-    graphite: # Use the "graphite" Maven profile to have the Graphite dependencies
-      enabled: false
-      host: localhost
-      port: 2003
-      prefix: reference
-    prometheus: # Use the "prometheus" Maven profile to have the Prometheus dependencies
-      enabled: false
-      endpoint: /prometheusMetrics
-    logs: # Reports Dropwizard metrics in the logs
-      enabled: false
-      reportFrequency: 60 # in seconds
   logging:
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
       enabled: false
