--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -177,6 +177,11 @@
       <version>2.1.0</version>
     </dependency>
     <dependency>
+      <groupId>uk.nhs.tis</groupId>
+      <artifactId>common-util</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.transformuk.hee</groupId>
       <artifactId>profile-client</artifactId>
       <version>2.4.0</version>
