--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -322,6 +322,11 @@
       <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
     </dependency>
