--- a/reference-api/pom.xml
+++ b/reference-api/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.transformuk.hee</groupId>
   <artifactId>reference-api</artifactId>
-  <version>2.3.5</version>
+  <version>2.4.0</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -27,6 +27,11 @@
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <version>1.1.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
     </dependency>
   </dependencies>
 
