--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -37,6 +37,7 @@
     <jjwt.version>0.7.0</jjwt.version>
     <logstash-logback-encoder.version>4.8</logstash-logback-encoder.version>
     <m2e.apt.activation>jdt_apt</m2e.apt.activation>
+    <lombok.version>1.18.10</lombok.version>
     <mapstruct.version>1.1.0.Final</mapstruct.version>
     <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
     <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
@@ -324,7 +325,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.10</version>
+      <version>${lombok.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -439,6 +440,11 @@
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
             <path>
               <groupId>org.mapstruct</groupId>
               <artifactId>mapstruct-processor</artifactId>
