--- a/reference-service/pom.xml
+++ b/reference-service/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.transformuk.hee.tis</groupId>
   <artifactId>reference-service</artifactId>
-  <version>3.12.1</version>
+  <version>3.13.0</version>
   <packaging>war</packaging>
 
   <prerequisites>
@@ -147,7 +147,7 @@
     <dependency>
       <groupId>com.transformuk.hee</groupId>
       <artifactId>profile-client</artifactId>
-      <version>2.4.0</version>
+      <version>3.0.1</version>
     </dependency>
     <dependency>
       <groupId>com.transformuk.hee</groupId>
@@ -361,6 +361,14 @@
     <!-- security -->
     <dependency>
       <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-acl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-data</artifactId>
     </dependency>
     <dependency>
@@ -498,9 +506,9 @@
           <executable>true</executable>
           <fork>true</fork>
           <!--
-          Enable the line below to have remote debugging of your application on port 5005
-          <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
-          -->
+          Enable the line below to have remote debugging of your application on port 5005-->
+          <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5007</jvmArguments>
+
         </configuration>
       </plugin>
       <plugin>
