--- a/reference-service/src/main/resources/config/application.yml
+++ b/reference-service/src/main/resources/config/application.yml
@@ -25,6 +25,10 @@ management:
     mail:
       enabled: false # When using the MailService, configure an SMTP server and set this to true
   add-application-context-header: false
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 
 spring:
   application:
