--- a/reference-service/src/main/resources/config/application-stage.yml
+++ b/reference-service/src/main/resources/config/application-stage.yml
@@ -6,6 +6,7 @@ spring:
   flyway:
     password: ${DBPASSWORD}
     schemas: ${DBNAME}
+    locations: classpath:db/migration/common,classpath:db/migration/tenant/hee,classpath:db/migration/stage
 
 logging:
   file: ${LOG_DIR}/reference.log
