--- a/.github/workflows/pr-analysis.yml
+++ b/.github/workflows/pr-analysis.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   analysis:
     name: Analyse PR
-    uses: health-education-england/.github/.github/workflows/pr-analysis-maven.yml@main
+    uses: health-education-england/.github/.github/workflows/pr-analysis-maven.yml@feat-submodule-with-or-without
     secrets:
       sonar-token: ${{ secrets.SONAR_TOKEN }}
       codeartifact-username: ${{ secrets.AWS_MAVEN_USERNAME }}
