--- a/reference-client/pom.xml
+++ b/reference-client/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.transformuk.hee</groupId>
   <artifactId>reference-client</artifactId>
-  <version>4.16.0</version>
+  <version>4.17.0</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -64,6 +64,12 @@
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
       <version>2.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.transformuk.hee</groupId>
+      <artifactId>reference-api</artifactId>
+      <version>2.14.0</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
